apps/shared/base/validating-admission-policies/bindings/deploy-required-fields-binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: deploy-required-fields
spec:
  policyName: deploy-required-fields
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - devops-app
            - ci
