apps/shared/base/validating-admission-policies/bindings/required-labels-binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: required-labels
spec:
  policyName: required-labels
  validationActions: [Deny]
  matchResources: # does not filter cluster scoped resources
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - devops-app
            - ci
            - shared
